--- a/.github/workflows/update-wexmac-data.yml
+++ b/.github/workflows/update-wexmac-data.yml
@@ -34,6 +34,7 @@ jobs:
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
             git commit -m "Update WEXMAC task order data ($(date -u +%Y-%m-%d))"
+            git pull --rebase origin main
             git push
           else
             echo "No data changes detected."
